feat(Pool): disable test connection on return, adds rollback if it's not autocommit, config refactor