@@ -16,6 +16,7 @@ package org.eclipse.edc.sql.pool.commons;
 
 import org.eclipse.edc.runtime.metamodel.annotation.Extension;
 import org.eclipse.edc.runtime.metamodel.annotation.Inject;
+import org.eclipse.edc.spi.monitor.Monitor;
 import org.eclipse.edc.spi.system.ServiceExtension;
 import org.eclipse.edc.spi.system.ServiceExtensionContext;
 import org.eclipse.edc.spi.system.configuration.Config;
@@ -30,43 +31,32 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Properties;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import javax.sql.DataSource;
+
+import static java.lang.String.format;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.CONFIGURATION_MAPPING;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.POOL_CONNECTIONS_MAX_IDLE;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.POOL_CONNECTIONS_MAX_TOTAL;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.POOL_CONNECTIONS_MIN_IDLE;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.POOL_CONNECTION_TEST_ON_BORROW;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.POOL_CONNECTION_TEST_ON_CREATE;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.POOL_CONNECTION_TEST_ON_RETURN;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.POOL_CONNECTION_TEST_QUERY;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.POOL_CONNECTION_TEST_WHILE_IDLE;
+import static org.eclipse.edc.sql.pool.commons.CommonsConnectionPoolConfigKeys.URL;
 
 @Extension(value = CommonsConnectionPoolServiceExtension.NAME)
 public class CommonsConnectionPoolServiceExtension implements ServiceExtension {
     public static final String NAME = "Commons Connection Pool";
-    static final String EDC_DATASOURCE_PREFIX = "edc.datasource";
+    public static final String EDC_DATASOURCE_PREFIX = "edc.datasource";
     private final List<CommonsConnectionPool> commonsConnectionPools = new LinkedList<>();
     @Inject
     private DataSourceRegistry dataSourceRegistry;
 
-    private static void setIfProvidedString(String key, Consumer<String> setter, Config config) {
-        var value = config.getString(key, null);
-        if (value == null) {
-            return;
-        }
-        setter.accept(value);
-    }
-
-    private static void setIfProvidedInt(String key, Consumer<Integer> setter, Config config) {
-        var value = config.getInteger(key, null);
-        if (value == null) {
-            return;
-        }
-
-        setter.accept(value);
-    }
-
-    private static void setIfProvidedBoolean(String key, Consumer<Boolean> setter, Config config) {
-        var value = config.getString(key, null);
-        if (value == null) {
-            return;
-        }
-
-        setter.accept(Boolean.parseBoolean(value));
-    }
+    @Inject
+    private Monitor monitor;
 
     @Override
     public String name() {
@@ -95,9 +85,37 @@ public class CommonsConnectionPoolServiceExtension implements ServiceExtension {
         }
     }
 
+    public List<CommonsConnectionPool> getCommonsConnectionPools() {
+        return commonsConnectionPools;
+    }
+
+    private void setIfProvidedString(String key, Consumer<String> setter, Config config) {
+        setIfProvided(key, setter, config::getString);
+    }
+
+    private void setIfProvidedBoolean(String key, Consumer<Boolean> setter, Config config) {
+        setIfProvided(key, setter, config::getBoolean);
+    }
+
+    private void setIfProvidedInt(String key, Consumer<Integer> setter, Config config) {
+        setIfProvided(key, setter, config::getInteger);
+    }
+
+    private <T> void setIfProvided(String key, Consumer<T> setter, BiFunction<String, T, T> getter) {
+        var oldKey = CONFIGURATION_MAPPING.get(key);
+        var oldValue = getter.apply(oldKey, null);
+        if (oldValue != null) {
+            monitor.warning(format("Configuration setting %s has been deprecated, please use %s instead", oldKey, key));
+        }
+        var value = getter.apply(key, oldValue);
+        if (value != null) {
+            setter.accept(value);
+        }
+    }
+
     private Map<String, CommonsConnectionPool> createConnectionPools(Config parent) {
         Map<String, CommonsConnectionPool> commonsConnectionPools = new HashMap<>();
-        for (Config config : parent.partition().collect(Collectors.toList())) {
+        for (Config config : parent.partition().toList()) {
             String dataSourceName = config.currentNode();
 
             DataSource dataSource = createDataSource(config);
@@ -109,7 +127,7 @@ public class CommonsConnectionPoolServiceExtension implements ServiceExtension {
     }
 
     private DataSource createDataSource(Config config) {
-        String jdbcUrl = Objects.requireNonNull(config.getString(CommonsConnectionPoolConfigKeys.URL));
+        String jdbcUrl = Objects.requireNonNull(config.getString(URL));
 
         Properties properties = new Properties();
         properties.putAll(config.getRelativeEntries());
@@ -122,15 +140,15 @@ public class CommonsConnectionPoolServiceExtension implements ServiceExtension {
     private CommonsConnectionPool createConnectionPool(DataSource unPooledDataSource, Config config) {
         CommonsConnectionPoolConfig.Builder builder = CommonsConnectionPoolConfig.Builder.newInstance();
 
-        setIfProvidedInt(CommonsConnectionPoolConfigKeys.POOL_MAX_IDLE_CONNECTIONS, builder::maxIdleConnections, config);
-        setIfProvidedInt(CommonsConnectionPoolConfigKeys.POOL_MAX_TOTAL_CONNECTIONS, builder::maxTotalConnections, config);
-        setIfProvidedInt(CommonsConnectionPoolConfigKeys.POOL_MIN_IDLE_CONNECTIONS, builder::minIdleConnections, config);
-        setIfProvidedBoolean(CommonsConnectionPoolConfigKeys.POOL_TEST_CONNECTION_ON_BORROW, builder::testConnectionOnBorrow, config);
-        setIfProvidedBoolean(CommonsConnectionPoolConfigKeys.POOL_TEST_CONNECTION_ON_CREATE, builder::testConnectionOnCreate, config);
-        setIfProvidedBoolean(CommonsConnectionPoolConfigKeys.POOL_TEST_CONNECTION_ON_RETURN, builder::testConnectionOnReturn, config);
-        setIfProvidedBoolean(CommonsConnectionPoolConfigKeys.POOL_TEST_CONNECTION_WHILE_IDLE, builder::testConnectionWhileIdle, config);
-        setIfProvidedString(CommonsConnectionPoolConfigKeys.POOL_TEST_QUERY, builder::testQuery, config);
+        setIfProvidedInt(POOL_CONNECTIONS_MAX_IDLE, builder::maxIdleConnections, config);
+        setIfProvidedInt(POOL_CONNECTIONS_MAX_TOTAL, builder::maxTotalConnections, config);
+        setIfProvidedInt(POOL_CONNECTIONS_MIN_IDLE, builder::minIdleConnections, config);
+        setIfProvidedBoolean(POOL_CONNECTION_TEST_ON_BORROW, builder::testConnectionOnBorrow, config);
+        setIfProvidedBoolean(POOL_CONNECTION_TEST_ON_CREATE, builder::testConnectionOnCreate, config);
+        setIfProvidedBoolean(POOL_CONNECTION_TEST_ON_RETURN, builder::testConnectionOnReturn, config);
+        setIfProvidedBoolean(POOL_CONNECTION_TEST_WHILE_IDLE, builder::testConnectionWhileIdle, config);
+        setIfProvidedString(POOL_CONNECTION_TEST_QUERY, builder::testQuery, config);
 
-        return new CommonsConnectionPool(unPooledDataSource, builder.build());
+        return new CommonsConnectionPool(unPooledDataSource, builder.build(), monitor);
     }
 }
